--- a/docs/api.yaml
+++ b/docs/api.yaml
@@ -15,3 +15,19 @@ paths:
 
 components:
   schemas:
+    Employee:
+      $ref: './spec/components/schemas/Employee.yaml'
+    EmployeeCreate:
+      $ref: './spec/components/schemas/EmployeeCreate.yaml'
+    EmployeeUpdate:
+      $ref: './spec/components/schemas/EmployeeUpdate.yaml'
+    ComplicatedStatus:
+      $ref: './spec/components/schemas/ComplicatedStatus.yaml'
+    Links:
+      $ref: './spec/components/schemas/Links.yaml'
+    Organization:
+      $ref: './spec/components/schemas/Organization.yaml'
+    OrganizationCreate:
+      $ref: './spec/components/schemas/OrganizationCreate.yaml'
+    OrganizationUpdate:
+      $ref: './spec/components/schemas/OrganizationUpdate.yaml'
