--- a/docs/spec/components/schemas/EmployeeUpdate.yaml
+++ b/docs/spec/components/schemas/EmployeeUpdate.yaml
@@ -25,9 +25,21 @@ properties:
           user_id:
             type: string
             description: "User id"
-          name:
+          first_name:
+            type: string
+            description: "first name of employee"
+          second_name:
+            type: string
+            description: "second name of employee"
+          third_name:
+            type: string
+            description: "third name of employee"
+          display_name:
             type: string
             description: "name of employee"
+          position:
+            type: string
+            description: "position in the company"
           desc:
             type: string
             description: "Description"
