--- a/docs/spec/components/schemas/Organization.yaml
+++ b/docs/spec/components/schemas/Organization.yaml
@@ -22,6 +22,7 @@ properties:
           - logo
           - desc
           - sort
+          - verified
           - links
           - complicated_status
           - created_at
@@ -38,6 +39,9 @@ properties:
           sort:
             type: string
             description: "Type of Organization"
+          verified:
+            type: string
+            description: "verified status"
           links:
             $ref: "./Links.yaml"
           complicated_status:
