--- a/docs/api.yaml
+++ b/docs/api.yaml
@@ -1,8 +1,8 @@
-openapi: 3.0.0
+openapi: 3.0.3
 info:
-  title: Cifra SSO REST API
-  description: SSO REST API for Cifra app
-  version: 0.0.1
+  title: test
+  description: example
+  version: 0.0.0
 
 paths:
   /test:
