--- a/docs/spec/components/responses/internalError.yaml
+++ b/docs/spec/components/responses/internalError.yaml
@@ -1,5 +1,5 @@
 description: Internal server error
 content:
   application/vnd.api+json:
-    schema:
+    schemas:
       $ref: '../schemas/Errors.yaml'
