--- a/docs/spec/components/responses/notFound.yaml
+++ b/docs/spec/components/responses/notFound.yaml
@@ -1,5 +1,5 @@
 description: Requested resource does not exist.
 content:
   application/vnd.api+json:
-    schema:
+    schemas:
       $ref: '../schemas/Errors.yaml'
