--- a/docs/spec/components/responses/tooManyRequests.yaml
+++ b/docs/spec/components/responses/tooManyRequests.yaml
@@ -1,5 +1,5 @@
 description: Too many requests
 content:
   application/vnd.api+json:
-    schema:
+    schemas:
       $ref: '../schemas/Errors.yaml'
