--- a/docs/spec/components/schemas/Employee.yaml
+++ b/docs/spec/components/schemas/Employee.yaml
@@ -19,7 +19,6 @@ properties:
         required:
           - first_name
           - second_name
-          - third_name
           - display_name
           - position
           - verified
@@ -51,6 +50,11 @@ properties:
           role:
             type: string
             description: "User role"
+          updated_at:
+            type: string
+            format: data-time
+            description: "User updated at"
+            example: "2021-01-01T00:00:00Z"
           created_at:
             type: string
             format: date-time
