--- a/docs/spec/components/schemas/OrganizationCreate.yaml
+++ b/docs/spec/components/schemas/OrganizationCreate.yaml
@@ -15,19 +15,59 @@ properties:
         type: object
         required:
           - name
-          - logo
           - desc
           - sort
+          - country
+          - owner
         properties:
           name:
             type: string
             description: "Team name"
-          logo:
-            type: logo
-            description: "link to photo"
           desc:
             type: string
             description: "Team description"
           sort:
             type: string
             description: "Type of Organization"
+          country:
+            type: string
+            description: "Country of registration"
+          owner:
+            type: object
+            required:
+              - first_name
+              - second_name
+              - display_name
+              - position
+              - desc
+              - created_at
+            properties:
+              first_name:
+                type: string
+                description: "first name of employee"
+              second_name:
+                type: string
+                description: "second name of employee"
+              third_name:
+                type: string
+                description: "third name of employee"
+              display_name:
+                type: string
+                description: "name of employee"
+              position:
+                type: string
+                description: "position in the company"
+              verified:
+                type: string
+                description: "verified status"
+              desc:
+                type: string
+                description: "Description"
+              created_at:
+                type: string
+                format: date-time
+                description: "User created at"
+                example: "2021-01-01T00:00:00Z"
+          city:
+            type: string
+            description: "City of HQ"
