--- a/docs/spec/components/schemas/OrganizationUpdate.yaml
+++ b/docs/spec/components/schemas/OrganizationUpdate.yaml
@@ -17,21 +17,19 @@ properties:
         enum: [ organization ]
       attributes:
         type: object
-        required:
-          - name
-          - logo
-          - desc
-          - sort
         properties:
           name:
             type: string
             description: "Team name"
-          logo:
-            type: logo
-            description: "link to photo"
           desc:
             type: string
             description: "Team description"
           sort:
             type: string
             description: "Type of Organization"
+          country:
+            type: string
+            description: "Country of registration"
+          city:
+            type: string
+            description: "City of HQ"
