--- a/docs/spec/components/schemas/Participant.yaml
+++ b/docs/spec/components/schemas/Participant.yaml
@@ -52,7 +52,7 @@ properties:
             description: "User role"
           updated_at:
             type: string
-            format: data-time
+            format: date-time
             description: "User updated at"
             example: "2021-01-01T00:00:00Z"
           created_at:
@@ -60,3 +60,17 @@ properties:
             format: date-time
             description: "User created at"
             example: "2021-01-01T00:00:00Z"
+      relationships:
+        type : object
+        required:
+          - user
+        properties:
+          user:
+            type: object
+            required:
+              - links
+            properties:
+              links:
+                type: string
+                description: "Link to user"
+                example: "https://api.example.com/v1/users/1"
