--- a/docs/spec/components/schemas/OrganizationLinksUpdate.yaml
+++ b/docs/spec/components/schemas/OrganizationLinksUpdate.yaml
@@ -16,4 +16,4 @@ properties:
         type: string
         enum: [ organization_link_update ]
       attributes:
-        $ref: "./Links.yaml"
+        $ref: "./OrganizationLinks.yaml"
