--- a/docs/spec/components/schemas/ParticipantCollection.yaml
+++ b/docs/spec/components/schemas/ParticipantCollection.yaml
@@ -7,19 +7,6 @@ properties:
   data:
     type: array
     items:
-      $ref: './Participant.yaml'
+      $ref: './ParticipantData.yaml'
   links:
-    type: object
-    properties:
-      self:
-        type: string
-        description: Link to the current page
-      next:
-        type: string
-        description: Link to the next page
-  meta:
-    type: object
-    properties:
-      total:
-        type: integer
-        description: Total number of participant
+    $ref: './Links.yaml'
